<?xml version="1.0"?>
<package format="2">
  <name>mybot</name>
  <version>0.1.0</version>
  <description>
    The mybot package contains URDF examples for a 2-wheeled robot with a lidar and camera sensors.
  </description>

  <author>Changwon Kim</author>
  <maintainer email="ckim@pknu.ac.kr">Changown Kim</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_ros</exec_depend> 
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>xacro</exec_depend>
</package>
